Add og tags and image to README file

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="To-Do List" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://anagudelogu-to-do-list.netlify.app/" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/77069011/174409929-10442d35-f5ca-43e9-91a7-a209ec9957ce.png" />
     <title>To-Do List</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
 </head>
 <body>
     <main>
